# public/docs/openapi.yaml
@@ -21,11 +21,11 @@ paths:
               schema:
                 type: object
                 example:
-                  token: 30|YHNdsUxdu4iObESpsYBKLORp7ZKHxJeQP9K4WXBt
+                  token: 7|HGxClTYfCE8cjaDLHcWDssnrwlD8sJdJe7dROwhg
                 properties:
                   token:
                     type: string
-                    example: 30|YHNdsUxdu4iObESpsYBKLORp7ZKHxJeQP9K4WXBt
+                    example: 7|HGxClTYfCE8cjaDLHcWDssnrwlD8sJdJe7dROwhg
       tags:
         - Authentication
       requestBody:
@@ -58,11 +58,11 @@ paths:
               schema:
                 type: object
                 example:
-                  token: 31|S6wGAL8tYbBlvz6Kb25a0V4WtAEGlf0Td1mWpSrz
+                  token: 8|1fFFpsGIA0A8deLk9kNL5gN51SGer7X7Vc20flAF
                 properties:
                   token:
                     type: string
-                    example: 31|S6wGAL8tYbBlvz6Kb25a0V4WtAEGlf0Td1mWpSrz
+                    example: 8|1fFFpsGIA0A8deLk9kNL5gN51SGer7X7Vc20flAF
       tags:
         - Authentication
       requestBody:
@@ -75,7 +75,7 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: nemo
+                  example: culpa
                 image:
                   type: string
                   format: binary
@@ -83,7 +83,7 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: mann.arne@example.com
+                  example: dkilback@example.net
                 password:
                   type: string
                   description: djasoijdsaio.
@@ -104,11 +104,11 @@ paths:
                 created_in:
                   type: string
                   description: 'Must be a valid date.'
-                  example: '2023-09-17T09:30:57'
+                  example: '2023-09-28T07:49:15'
                 address:
                   type: string
                   description: ''
-                  example: cupiditate
+                  example: iure
                 password_confirmation:
                   type: string
                   description: djasoijdsaio.
@@ -126,67 +126,133 @@ paths:
       summary: ''
       operationId: getApiProfile
       description: ''
-      parameters: []
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
       responses:
-        401:
+        200:
           description: ''
           content:
             application/json:
               schema:
                 type: object
                 example:
-                  message: Unauthenticated.
+                  id: 45
+                  name: 'Ruben Rohan'
+                  image: 'http://localhost:8000/images/https://via.placeholder.com/640x480.png/009911?text=iure'
+                  email: danny51@example.net
+                  email_verified_at: '2023-09-28T07:45:47.000000Z'
+                  created_at: '2023-09-28T07:45:47.000000Z'
+                  updated_at: '2023-09-28T07:45:47.000000Z'
                 properties:
-                  message:
+                  id:
+                    type: integer
+                    example: 45
+                  name:
                     type: string
-                    example: Unauthenticated.
+                    example: 'Ruben Rohan'
+                  image:
+                    type: string
+                    example: 'http://localhost:8000/images/https://via.placeholder.com/640x480.png/009911?text=iure'
+                  email:
+                    type: string
+                    example: danny51@example.net
+                  email_verified_at:
+                    type: string
+                    example: '2023-09-28T07:45:47.000000Z'
+                  created_at:
+                    type: string
+                    example: '2023-09-28T07:45:47.000000Z'
+                  updated_at:
+                    type: string
+                    example: '2023-09-28T07:45:47.000000Z'
       tags:
         - Authentication
-      security: []
   /api/profile/company:
     get:
       summary: ''
       operationId: getApiProfileCompany
       description: ''
-      parameters: []
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
       responses:
-        401:
+        200:
           description: ''
           content:
             application/json:
               schema:
                 type: object
                 example:
-                  message: Unauthenticated.
+                  id: 16
+                  address: nesciunt
+                  user_id: 45
+                  created_in: '2023-09-28T00:00:00.000000Z'
                 properties:
-                  message:
+                  id:
+                    type: integer
+                    example: 16
+                  address:
                     type: string
-                    example: Unauthenticated.
+                    example: nesciunt
+                  user_id:
+                    type: integer
+                    example: 45
+                  created_in:
+                    type: string
+                    example: '2023-09-28T00:00:00.000000Z'
       tags:
         - Authentication
-      security: []
   /api/profile/institution:
     get:
       summary: ''
       operationId: getApiProfileInstitution
       description: ''
-      parameters: []
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
       responses:
-        401:
+        200:
           description: ''
           content:
             application/json:
               schema:
                 type: object
                 example:
-                  message: Unauthenticated.
+                  id: 30
+                  address: recusandae
+                  user_id: 46
+                  created_in: '2023-09-28T00:00:00.000000Z'
                 properties:
-                  message:
+                  id:
+                    type: integer
+                    example: 30
+                  address:
                     type: string
-                    example: Unauthenticated.
+                    example: recusandae
+                  user_id:
+                    type: integer
+                    example: 46
+                  created_in:
+                    type: string
+                    example: '2023-09-28T00:00:00.000000Z'
       tags:
         - Authentication
-      security: []
   /api/category:
     get:
       summary: 'Handle the incoming request.'
@@ -937,18 +1003,13 @@ paths:
       description: ''
       parameters: []
       responses:
-        401:
+        200:
           description: ''
           content:
-            application/json:
+            text/plain:
               schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
+                type: string
+                example: ''
       tags:
         - Offer
       security: []
@@ -1039,18 +1100,13 @@ paths:
       description: ''
       parameters: []
       responses:
-        401:
+        200:
           description: ''
           content:
-            application/json:
+            text/plain:
               schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
+                type: string
+                example: ''
       tags:
         - Offer
       security: []
@@ -1060,18 +1116,13 @@ paths:
       description: ''
       parameters: []
       responses:
-        401:
+        200:
           description: ''
           content:
-            application/json:
+            text/plain:
               schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
+                type: string
+                example: ''
       tags:
         - Offer
       security: []
@@ -1096,26 +1147,90 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
+                type: object
                 example:
-                  -
-                    id: 6
-                    title: 'Sint dolorum voluptatem dolor itaque.'
-                    description: 'Perferendis animi assumenda dolore doloribus facere ducimus et. Quas inventore delectus eum aut animi. Eum iste maxime sequi.'
-                    ended_at: null
-                    institution_id: 11
-                    created_at: '2023-09-17T08:12:57.000000Z'
-                    updated_at: '2023-09-17T08:12:57.000000Z'
-                  -
-                    id: 22
-                    title: 'Quia vel quod porro praesentium.'
-                    description: 'Ratione quas sequi eaque. Delectus voluptatibus sunt ut. Tenetur beatae voluptates quasi autem ut. Optio incidunt sint et aspernatur quia eos architecto.'
-                    ended_at: null
-                    institution_id: 27
-                    created_at: '2023-09-17T08:12:58.000000Z'
-                    updated_at: '2023-09-17T08:12:58.000000Z'
+                  data:
+                    -
+                      id: 2
+                      title: 'Facere animi qui qui ut.'
+                      description: 'Ratione et quos ipsam. Voluptatem cum modi ullam aut corporis praesentium repudiandae. Cum occaecati est qui cumque praesentium in qui. Non voluptatum in dolorum ut.'
+                      ended_at: null
+                      institution_id: 7
+                      institution_name: 'Carleton Reynolds'
+                    -
+                      id: 9
+                      title: 'Adipisci debitis sit enim voluptatem.'
+                      description: 'Aliquid repellat quasi consequatur sapiente fuga amet. Eos laboriosam aut ut veritatis sit. Debitis aliquid facere voluptatem ducimus quisquam rerum corporis.'
+                      ended_at: null
+                      institution_id: 14
+                      institution_name: 'Ricky Leuschke'
+                    -
+                      id: 13
+                      title: 'Aut necessitatibus aperiam voluptatem qui facere.'
+                      description: 'Dolorem perferendis velit ea est rerum. Nulla consequatur natus qui dicta. Porro quia fuga culpa enim veritatis earum.'
+                      ended_at: null
+                      institution_id: 18
+                      institution_name: 'Dr. Mason Koelpin IV'
+                    -
+                      id: 18
+                      title: 'Perspiciatis et iure perferendis optio repellat.'
+                      description: 'Voluptatibus deleniti commodi perspiciatis officia. Molestias repellendus atque quibusdam tenetur odit non quia. Sit est facere assumenda eligendi omnis aut.'
+                      ended_at: null
+                      institution_id: 23
+                      institution_name: 'Prof. Darwin Ryan I'
+                properties:
+                  data:
+                    type: array
+                    example:
+                      -
+                        id: 2
+                        title: 'Facere animi qui qui ut.'
+                        description: 'Ratione et quos ipsam. Voluptatem cum modi ullam aut corporis praesentium repudiandae. Cum occaecati est qui cumque praesentium in qui. Non voluptatum in dolorum ut.'
+                        ended_at: null
+                        institution_id: 7
+                        institution_name: 'Carleton Reynolds'
+                      -
+                        id: 9
+                        title: 'Adipisci debitis sit enim voluptatem.'
+                        description: 'Aliquid repellat quasi consequatur sapiente fuga amet. Eos laboriosam aut ut veritatis sit. Debitis aliquid facere voluptatem ducimus quisquam rerum corporis.'
+                        ended_at: null
+                        institution_id: 14
+                        institution_name: 'Ricky Leuschke'
+                      -
+                        id: 13
+                        title: 'Aut necessitatibus aperiam voluptatem qui facere.'
+                        description: 'Dolorem perferendis velit ea est rerum. Nulla consequatur natus qui dicta. Porro quia fuga culpa enim veritatis earum.'
+                        ended_at: null
+                        institution_id: 18
+                        institution_name: 'Dr. Mason Koelpin IV'
+                      -
+                        id: 18
+                        title: 'Perspiciatis et iure perferendis optio repellat.'
+                        description: 'Voluptatibus deleniti commodi perspiciatis officia. Molestias repellendus atque quibusdam tenetur odit non quia. Sit est facere assumenda eligendi omnis aut.'
+                        ended_at: null
+                        institution_id: 23
+                        institution_name: 'Prof. Darwin Ryan I'
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 2
+                        title:
+                          type: string
+                          example: 'Facere animi qui qui ut.'
+                        description:
+                          type: string
+                          example: 'Ratione et quos ipsam. Voluptatem cum modi ullam aut corporis praesentium repudiandae. Cum occaecati est qui cumque praesentium in qui. Non voluptatum in dolorum ut.'
+                        ended_at:
+                          type: string
+                          example: null
+                        institution_id:
+                          type: integer
+                          example: 7
+                        institution_name:
+                          type: string
+                          example: 'Carleton Reynolds'
       tags:
         - Trender
       requestBody:
@@ -1128,7 +1243,7 @@ paths:
                 q:
                   type: string
                   description: ''
-                  example: delectus
+                  example: facere
       security: []
     post:
       summary: 'Store a newly created resource in storage.'
@@ -1172,11 +1287,11 @@ paths:
                 title:
                   type: string
                   description: ''
-                  example: dicta
+                  example: et
                 description:
                   type: string
                   description: ''
-                  example: 'Voluptatem labore voluptatibus eum dicta.'
+                  example: 'At dolores sed deleniti sint.'
                 details:
                   type: object
                   description: ''
@@ -1593,3 +1708,12 @@ tags:
   -
     name: Trender
     description: ''
+components:
+  securitySchemes:
+    default:
+      type: http
+      scheme: bearer
+      description: ''
+security:
+  -
+    default: []
